# firewall_ml

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push-to-colab.yml
docs/: mkdocs.yml
docs/docs/: index.md
firewall_ml/: __init__.py  dataset.py  features.py  plots.py
firewall_ml/modeling/: predict.py  train.py
notebooks/: EDA.ipynb  EDA_FINAL.ipynb  generic-eda.ipynb
src/: ingest_data.py
