[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "firewall_ml"
version = "0.0.1"
description = "Intrusion pattern detection through a network firewall"
authors = [
  { name = "jonabacho" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["firewall_ml"]
include = ["pyproject.toml", "firewall_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["firewall_ml"]
force-sort-within-sections = true

